--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}
-    Error 404
+    Home Page
 {% endblock %}
 {% block content %}
-    <h1>Page {{ page }} not found :(</h1>
+    <h1>Home Page</h1>
 {% endblock %}
