--- a/templates/index.html
+++ b/templates/index.html
@@ -5,39 +5,49 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
         <title>{{ title }}</title>
 
-        <link rel="stylesheet" href="/static/css/main.css"/>
-        
+        <!-- <link rel="stylesheet" href="/static/css/main.css"/> -->
     </head>
-
     <body>
-    <!-- your content here... -->
-        <h1>{{ title }}</h1>
 
-        <button id="click">Load Profile</button>
-        <button id="readProfile" style="display: none;">Read Profile</button>
+        <div class="container">
+            <div class="row">
+                <div class="col-6 mx-auto mt-5 text-center">
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script>
-            $('#click').click(function () {
-                $.ajax({
-                    type: 'GET',
-                    url: '/data',
-                    success: function (response) {
-                        localStorage.setItem('profile', JSON.stringify(response));
-                        $('#readProfile').show()
-                        $('#click').hide()
-                    }
-                });
-            });
+                    <h1 class="mb-5">Flask Image Upload and Show</h1>
 
-            $('#readProfile').click(function () {
-                let profile = localStorage.getItem('profile');
-                alert(profile);
-                alert('changing to an object now');
-                alert(JSON.parse(localStorage.getItem('profile')));
-            });
-        </script>
+                    <form method="post" enctype="multipart/form-data">
+                        {{ form.hidden_tag() }}
+
+                        {% for error in form.photo.errors %}
+                        <span style="color: red;">{{ error }}</span>
+                        {% endfor %}
+
+                        <div class="row justify-content-center">
+                            <div class="col-auto">
+                                {{ form.photo(class="form-control-file") }}
+                            </div>
+                            <div class="col-auto">
+                                {{ form.submit(class="btn btn-success") }}
+                            </div>
+                        </div>
+                    </form>
+
+                    {% if file_url %}
+                        <div class="mt-5">
+                            <img src="{{ file_url }}" style="width: 400px;">
+                        </div>
+                    {% endif %}
+
+                </div>
+            </div>
+        </div>
+
+
+    
     </body>
 </html>
