--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 
                         <div class="row justify-content-center">
                             <div class="col-auto">
-                                {{ form.photo(class="form-control-file") }}
+                                {{ form.photo(class="form-control") }}
                             </div>
                             <div class="col-auto">
                                 {{ form.submit(class="btn btn-success") }}
