--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
+
 {% block title %}
-    Error 404
+    404 Not Found
 {% endblock %}
+
 {% block content %}
-    <h1>Page {{ page }} not found :(</h1>
+    <h1>Page {{ page }} not found</h1>
 {% endblock %}
