--- a/templates/index.html
+++ b/templates/index.html
@@ -1,53 +1,66 @@
-<!doctype html>
+{% extends 'base.html' %}
 
-    <head>
-        <html lang="pl"></html>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+{% block title %}
+    TYTUŁ
+{% endblock %}
 
-        <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+{% block content %}
 
-        <title>{{ title }}</title>
+<div class="container">
+    <div class="row">
+        <div class="col-6 mx-auto mt-5 text-center">
 
-        <!-- <link rel="stylesheet" href="/static/css/main.css"/> -->
-    </head>
-    <body>
+            <h1 class="mb-5">Flask Image Upload and Show</h1>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-6 mx-auto mt-5 text-center">
+            <form method="post" enctype="multipart/form-data">
+                {{ form.hidden_tag() }}
 
-                    <h1 class="mb-5">Flask Image Upload and Show</h1>
+                {% for error in form.photo.errors %}
+                <span style="color: red;">{{ error }}</span>
+                {% endfor %}
 
-                    <form method="post" enctype="multipart/form-data">
-                        {{ form.hidden_tag() }}
-
-                        {% for error in form.photo.errors %}
-                        <span style="color: red;">{{ error }}</span>
-                        {% endfor %}
-
-                        <div class="row justify-content-center">
-                            <div class="col-auto">
-                                {{ form.photo(class="form-control") }}
-                            </div>
-                            <div class="col-auto">
-                                {{ form.submit(class="btn btn-success") }}
-                            </div>
-                        </div>
-                    </form>
-
-                    {% if file_url %}
-                        <div class="mt-5">
-                            <img src="{{ file_url }}" style="width: 400px;">
-                        </div>
-                    {% endif %}
-
+                <div class="row justify-content-center">
+                    <div class="col-auto">
+                        {{ form.photo(class="form-control") }}
+                    </div>
+                    <div class="col-auto">
+                        {{ form.submit(class="btn btn-success") }}
+                    </div>
                 </div>
+            </form>
+
+            {% if file_url %}
+                <div class="mt-5">
+                    <img src="{{ file_url }}" style="width: 400px;">
+                </div>
+            {% endif %}
+        </div>
+    </div>
+</div>
+
+<div>
+    <div>
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Templates
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <!-- <a class="dropdown-item" href="/">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a> -->
+                {% for datas in data %}
+                
+                    <a class="dropdown-item" href="#">
+                        <img src="{{ datas['blank'] }}"  style="width: 200px;"></img>
+                        <p>{{ datas['name'] }}</p>
+                    </a>
+                   
+             
+
+                {% endfor %}
+                
             </div>
         </div>
+</div>
 
-
-    
-    </body>
-</html>
+{% endblock content %}
