Accept only image files

--- a/templates/test.html
+++ b/templates/test.html
@@ -13,7 +13,7 @@
         <canvas id="canvas"></canvas>
         <div class="sidebar">
             <p>Add Image</p>
-            <input type="file" id="file">
+            <input type="file" id="file" accept="image/*">
             <div class="group">
                 <textarea placeholder="Type something" id="text"></textarea>
                 <input type="color" id="color">
