--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../static/style.css">
         {% block head %}
         {% endblock %}
     </head>
