--- a/templates/index.html
+++ b/templates/index.html
@@ -1,37 +1,19 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
+<h1>Meme <i>Generator</i></h1>
 
 <div class="container">
-    <div class="row">
-        <div class="col-6 mx-auto mt-5 text-center">
-
-            <h1 class="mb-5">Flask Image Upload and Show</h1>
-
-            <form method="post" enctype="multipart/form-data">
-                {{ form.hidden_tag() }}
-
-                {% for error in form.photo.errors %}
-                <span style="color: red;">{{ error }}</span>
-                {% endfor %}
-
-                <div class="row justify-content-center">
-                    <div class="col-auto">
-                        {{ form.photo(class="form-control") }}
-                    </div>
-                    <div class="col-auto">
-                        {{ form.submit(class="btn btn-success") }}
-                    </div>
-                </div>
-            </form>
-
-            {% if file_url %}
-                <div class="mt-5">
-                    <img src="{{ file_url }}" style="width: 400px;">
-                </div>
-            {% endif %}
+    <canvas id="canvas"></canvas>
+    <div class="sidebar">
+        <p>Add Image</p>
+        <input type="file" id="file" accept="image/*">
+        <div class="group">
+            <textarea placeholder="Type something" id="text"></textarea>
+            <input type="color" id="color">
+            <button id="addText">Add Text</button>
         </div>
+        <button id="save">Save</button>
     </div>
 </div>
 
@@ -41,24 +23,24 @@
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Templates
             </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="templates">
                 <!-- <a class="dropdown-item" href="/">Action</a>
                 <a class="dropdown-item" href="#">Another action</a>
                 <a class="dropdown-item" href="#">Something else here</a> -->
                 {% for datas in data %}
-                
                     <a class="dropdown-item" href="#">
-                        <img src="{{ datas['blank'] }}"  style="width: 200px;"></img>
+                        <img src="{{ datas['blank'] }}" style="width: 200px;" alt="Not found"/>
                         <p>{{ datas['name'] }}</p>
                     </a>
-                   
-             
-
                 {% endfor %}
-                
             </div>
         </div>
+    </div>
 </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/460/fabric.js"
+            integrity="sha512-d5yqsvICrC8y0ivNsNizSCHXjzireXYU6LmzAvcrL97GMwEn0VKx1vclEwvtsh/yPD2EcATnUG1oEtJuFcTE3Q=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="../static/main.js"></script>
 
 
 {% endblock content %}
