--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,14 @@
     <div class="sidebar">
         <p>Add Image</p>
         <input type="file" id="file" accept="image/*">
+
+        <label for="font-control">Font family:</label>
+        <select id="font-control" name="font-control">
+            <option value="Arial">Arial</option>
+            <option value="Times New Roman">Times</option>
+            <option value=""></option>
+        </select>
+
         <div class="group">
             <textarea placeholder="Type something" id="text"></textarea>
             <input type="color" id="color">
