--- a/templates/home.html
+++ b/templates/home.html
@@ -36,7 +36,7 @@
                         <a class="dropdown-item" href="#">Another action</a>
                         <a class="dropdown-item" href="#">Something else here</a> -->
                         {% for datas in data %}
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item">
                                 <img src="{{ datas['blank'] }}" style="width: 200px;" alt="Not found"/>
                                 <p>{{ datas['name'] }}</p>
                             </a>
