--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,7 @@
         </div>
     </div>
 </div>
+    <script src=”https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js”></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/460/fabric.js"
             integrity="sha512-d5yqsvICrC8y0ivNsNizSCHXjzireXYU6LmzAvcrL97GMwEn0VKx1vclEwvtsh/yPD2EcATnUG1oEtJuFcTE3Q=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
