--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
         <meta charset="utf-8">
         <title>{% block title %} memeGen {% endblock %}</title>
 
+        <link rel="shortcut icon" type="image/x-icon" href="static/hamster.ico" />
+
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
