--- a/templates/home.html
+++ b/templates/home.html
@@ -24,30 +24,40 @@
             <button id="save">Save</button>
 
 
-        <!-- templates -->
-        <div>
+            <!-- templates -->
             <div>
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Templates
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="templates">
-                        <!-- <a class="dropdown-item" href="/">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a> -->
-                        {% for datas in data %}
-                            <a class="dropdown-item">
-                                <img src="{{ datas['blank'] }}" style="width: 200px;" alt="Not found"/>
-                                <p>{{ datas['name'] }}</p>
-                            </a>
-                        {% endfor %}
+                <div>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Templates
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="templates">
+                            <!-- <a class="dropdown-item" href="/">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a> -->
+                            {% for datas in data %}
+                                <a class="dropdown-item">
+                                    <img src="{{ datas['blank'] }}" style="width: 200px;" alt="Not found"/>
+                                    <p>{{ datas['name'] }}</p>
+                                </a>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <div>
+                        <form class="navbar-form navbar-left" role="search">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Search" id="searchField">
+                            </div>
+                            <button type="submit" class="btn btn-default" id="searchBtn">Find templates</button>
+                        </form>
+                    </div>
+                    <div id="templateResults">
                     </div>
                 </div>
             </div>
         </div>
-        
     </div>
-</div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/460/fabric.js" 
     integrity="sha512-d5yqsvICrC8y0ivNsNizSCHXjzireXYU6LmzAvcrL97GMwEn0VKx1vclEwvtsh/yPD2EcATnUG1oEtJuFcTE3Q==" 
