--- a/templates/home.html
+++ b/templates/home.html
@@ -36,12 +36,12 @@
                             <!-- <a class="dropdown-item" href="/">Action</a>
                             <a class="dropdown-item" href="#">Another action</a>
                             <a class="dropdown-item" href="#">Something else here</a> -->
-                            {% for datas in data %}
+                            {#{% for datas in data %}
                                 <a class="dropdown-item">
                                     <img src="{{ datas['blank'] }}" style="width: 200px;" alt="Not found"/>
                                     <p>{{ datas['name'] }}</p>
                                 </a>
-                            {% endfor %}
+                            {% endfor %}#}
                         </div>
                     </div>
                     <div>
