--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,8 @@
         <!-- jQuerry -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>  
         <link rel="stylesheet" href="../static/style.css">
-        {% block style %}
         
-        <!-- <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -->
+        {% block style %}
         {% endblock %}
     </head>
 
@@ -35,7 +34,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="/">Main page</a>
+                            <a class="nav-link" href="/">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/about">About</a>
