--- a/templates/404.html
+++ b/templates/404.html
@@ -5,5 +5,9 @@
 {% endblock %}
 
 {% block content %}
+
+<div style="padding: 20px;">
     <h1>Page {{ page }} not found</h1>
+</div>
+
 {% endblock %}
