--- a/templates/create-meme.html
+++ b/templates/create-meme.html
@@ -20,53 +20,49 @@ create-meme
 
     <div class="row justify-content-center" style="padding: 20px;">
 
-        <!-- canva -->>
-        <div  class="col-md-6 col-sm-6" style="background: blue;">
-            
+        <!-- canva -->
+        <div  class="col-sm" style="background: blue;">
             <canvas id="canvas"></canvas>
         </div>
 
         <!-- utils -->
-        <div class="col-md-6 col-sm-6" style="background: brown;">
+        <div class="col-sm" style="background: brown;">
+
+            <!-- upload/template -->
             <div>
 
+
+                
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Templates</button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="templates">
+                    <form class="navbar-form navbar-left" role="search">
+                        <div class="row form-group">
+                            <input type="text" class="form-control col-sm" placeholder="Search" id="searchField">
+                            <button type="submit" class="btn btn-default col-sm" id="searchBtn">Find templates</button>
+                        </div>
+                                        
+                        <div id="templateResults"></div>
+                    </form>
+                </div>
+
+
                 <input type="file" id="file" accept="image/*">
-                <div>
-                    <textarea placeholder="Type something" id="text"></textarea>
-                    <input type="color" id="color">
-                    <button id="addText">Add Text</button>
-                </div>
-                <button id="save">Save Meme</button>
-                <button id="download">Download</button>
-    
-    
-                <!-- templates -->
-                <div>
-                    <div>
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Templates
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="templates">
-                            </div>
-                        </div>
-                        <div>
-                            <form class="navbar-form navbar-left" role="search">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Search" id="searchField">
-                                </div>
-                                <button type="submit" class="btn btn-default" id="searchBtn">Find templates</button>
-                            </form>
-                        </div>
-                        <div id="templateResults">
-                        </div>
-                    </div>
-                </div>
+
+            </div>
+
+            <!-- text/color -->
+            <div>
+                <textarea placeholder="Add text" id="text"></textarea>
+                <input type="color" id="color">
+                <button id="addText">Add Text</button>
+            </div>
+
+            <!-- save/download -->
+            <div>
+                <button type="button" class="btn btn-dark" id="save">Save Meme</button>
             </div>
 
         </div>
-
 
     </div>
 </div>
