--- a/templates/create-meme.html
+++ b/templates/create-meme.html
@@ -10,7 +10,7 @@ create-meme
 
 {% block style %}
 
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 
 {% endblock %}
 
