--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
         
         <!-- jQuerry -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>  
-        <link rel="stylesheet" href="../static/style.css">
+        <link rel="stylesheet" href="../static/css/style.css">
         
         {% block style %}
         {% endblock %}
