--- a/templates/test.html
+++ b/templates/test.html
@@ -3,7 +3,7 @@
 
 {% block style %}
 
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 
 {% endblock %}
 
