--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,8 @@
               <span class="text-muted">(c) wwwjs project 2022 g24</span>
             </div>
           </footer>
+
+          <script src="../static/main.js"></script>
     </body>
     
 </html>
