--- a/templates/create-meme.html
+++ b/templates/create-meme.html
@@ -77,6 +77,14 @@
                         <button type="button" class="col-sm btn btn-dark" id="addText">Add Text</button>
                     </div>
 
+                    <label for="font-control">Font family:</label>
+                    <select id="font-control" name="font-control">
+                        <option selected value="Impact">Impact</option>
+                        <option value="Arial">Arial</option>
+                        <option value="Times New Roman">Times</option>
+                        <option value="Comic Sans MS">Comic Sans</option>
+                    </select>
+
                 </div>
 
                 <!-- save/download -->
