--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,3 +135,7 @@ canvas {
 .select-box .option .radio {
   display: none;
 }/*# sourceMappingURL=style.css.map */
+
+.snake {
+  background-color: #005DFF;
+}
