--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/rick">Rick</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/snake">Snake Game</a>
+                        </li>
                     </ul>
                 </div>
             </div>
