--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -21,7 +21,6 @@ $myColors: (
 
     k: #5f2c82,
     l: #49a09d,
-
 );
 
 @function color($color-name) {
@@ -40,8 +39,7 @@ body{
     
     footer {
         text-align: center;
-        // background: color(k);
-        // color: white;
+ 
         padding: 20px;
         position: fixed;
         bottom: 0;
@@ -51,7 +49,6 @@ body{
         min-height: 50px;
         margin-top: auto;
     }
-
 }
 
 
@@ -59,11 +56,9 @@ body{
     background-color: forestgreen;
   }
   
-  .regex-normal {
+.regex-normal {
     background-color: inherit;
-  }
-
-
+}
 
 .meme-container {
     // margin-left: auto;
@@ -88,7 +83,6 @@ body{
     font-weight: 500;
     font-size: 16px;
 
-
 }
 
 textarea {
@@ -117,7 +111,6 @@ textarea {
     font-weight: 500;
     font-size: 16px;
 
-
 }
 
 textarea {
@@ -139,29 +132,54 @@ textarea {
     overflow: hidden;
     width: 40px;
     height: 40px;
-    // border: solid 2px #ddd;
-    border-radius: 7px;
+    border: solid 5px transparent;
+    border-radius: 50%;
+    margin-left: -1.5rem;
   }
   
-  .input-color {
+.input-color {
     position: absolute;
     right: -8px;
     top: -8px;
     width: 56px;
     height: 56px;
     border: none;
-  }
-  
-  .text {
-    position: absolute;
-    right: -8px;
-    top: -8px;
-    width: 56px;
-    height: 56px;
-    border: none;
-  }
+}
 
-  .canvas-container {
+.my-button {
+    background-color: #f4511e;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    font-size: 16px;
+    margin: 4px 2px;
+    opacity: 0.6;
+    transition: 0.3s;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+    
+}
+
+
+
+.button:hover {
+    opacity: 1,
+
+}
+
+
+.text {
+    position: absolute;
+    right: -8px;
+    top: -8px;
+    width: 56px;
+    height: 56px;
+    border: none;
+}
+
+.canvas-container {
 
     float: right;
 
@@ -177,18 +195,17 @@ textarea {
         // display: block;
         width: 800px;
     }
-    
-  }
+}
   
-  .select-box {
+.select-box {
     display: flex;
     width: 1rem;
     flex-direction: column;
 
-  }
+}
 
-  
-  .select-box .options-container {
+
+.select-box .options-container {
     background: #2f3640;
     color: #f5f6fa;
     max-height: 0;
@@ -197,23 +214,23 @@ textarea {
     transition: all 0.4s;
     border-radius: 8px;
     overflow: hidden;
-  
+
     order: 1;
-  }
-  
-  .selected {
+}
+
+.selected {
     background: #2f3640;
     border-radius: 8px;
     margin-bottom: 8px;
     color: #f5f6fa;
     position: relative;
-  
+
     order: 0;
-  }
-  
-  .selected::after {
+}
+
+.selected::after {
     content: "";
-    // background: url("img/arrow-down.svg");
+    background: url("cow.svg");
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
@@ -221,46 +238,46 @@ textarea {
     width: 32px;
     right: 10px;
     top: 5px;
-  
+
     transition: all 0.4s;
-  }
-  
-  .select-box .options-container.active {
-    max-height: 540px;
+}
+
+.select-box .options-container.active {
+    max-height: 340px;
     opacity: 1;
     overflow-y: scroll;
-  }
-  
-  .select-box .options-container.active + .selected::after {
+}
+
+.select-box .options-container.active + .selected::after {
     transform: rotateX(180deg);
     top: -6px;
-  }
-  
-  .select-box .options-container::-webkit-scrollbar {
+}
+
+.select-box .options-container::-webkit-scrollbar {
     width: 8px;
     background: #0d141f;
     border-radius: 0 8px 8px 0;
-  }
-  
-  .select-box .options-container::-webkit-scrollbar-thumb {
+}
+
+.select-box .options-container::-webkit-scrollbar-thumb {
     background: #525861;
     border-radius: 0 8px 8px 0;
-  }
-  
-  .select-box .option,
-  .selected {
+}
+
+.select-box .option,
+.selected {
     padding: 12px 24px;
     cursor: pointer;
-  }
-  
-  .select-box .option:hover {
+}
+
+.select-box .option:hover {
     background: #414b57;
-  }
-  
-  .select-box label {
+}
+
+.select-box label {
     cursor: pointer;
-  }
-  
-  .select-box .option .radio {
+}
+
+.select-box .option .radio {
     display: none;
-  }
+}
