Add start button, add game logic

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -83,6 +83,11 @@ textarea {
   color: red;
 }
 
+#defeatText {
+  text-align: center;
+  color: red;
+}
+
 .input-color-container {
   position: relative;
   margin-top: -2.8rem;
